manifests/platform/external-secrets-operator/components/helm/deployment.yaml
---
# Source: external-secrets/templates/cert-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-secrets-cert-controller
  namespace: external-secrets-operator
  labels:
    helm.sh/chart: external-secrets-0.20.4
    app.kubernetes.io/name: external-secrets-cert-controller
    app.kubernetes.io/instance: helm-chart-0.20.4
    app.kubernetes.io/version: "v0.20.4"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-cert-controller
      app.kubernetes.io/instance: helm-chart-0.20.4
  template:
    metadata:
      labels:
        helm.sh/chart: external-secrets-0.20.4
        app.kubernetes.io/name: external-secrets-cert-controller
        app.kubernetes.io/instance: helm-chart-0.20.4
        app.kubernetes.io/version: "v0.20.4"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: external-secrets-cert-controller
      automountServiceAccountToken: true
      hostNetwork: false
      containers:
        - name: cert-controller
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            # runAsUser: 1000 
            # unable to validate against any security context constraint: [provider "anyuid": Forbidden: not usable by user or serviceaccount, provider restricted-v2: .containers[0].runAsUser:Invalid value: 1000: must be in the ranges: [1000830000, 1000839999]
            seccompProfile:
              type: RuntimeDefault
          image: oci.external-secrets.io/external-secrets/external-secrets:v0.20.4
          imagePullPolicy: IfNotPresent
          args:
          - certcontroller
          - --crd-requeue-interval=5m
          - --service-name=external-secrets-webhook
          - --service-namespace=external-secrets-operator
          - --secret-name=external-secrets-webhook
          - --secret-namespace=external-secrets-operator
          - --metrics-addr=:8080
          - --healthz-addr=:8081
          - --loglevel=info
          - --zap-time-encoding=epoch
          - --enable-partial-cache=true
          ports:
            - containerPort: 8080
              protocol: TCP
              name: metrics
          readinessProbe:
            httpGet:
              port: 8081
              path: /readyz
            initialDelaySeconds: 20
            periodSeconds: 5
          resources:
            limits:
              cpu: 60m
              memory: 140Mi
            requests:
              cpu: 30m
              memory: 70Mi
---
# Source: external-secrets/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-secrets
  namespace: external-secrets-operator
  labels:
    helm.sh/chart: external-secrets-0.20.4
    app.kubernetes.io/name: external-secrets
    app.kubernetes.io/instance: helm-chart-0.20.4
    app.kubernetes.io/version: "v0.20.4"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: external-secrets
      app.kubernetes.io/instance: helm-chart-0.20.4
  template:
    metadata:
      labels:
        helm.sh/chart: external-secrets-0.20.4
        app.kubernetes.io/name: external-secrets
        app.kubernetes.io/instance: helm-chart-0.20.4
        app.kubernetes.io/version: "v0.20.4"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: external-secrets
      automountServiceAccountToken: true
      hostNetwork: false
      containers:
        - name: external-secrets
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            # runAsUser: 1000 
            # unable to validate against any security context constraint: [provider "anyuid": Forbidden: not usable by user or serviceaccount, provider restricted-v2: .containers[0].runAsUser:Invalid value: 1000: must be in the ranges: [1000830000, 1000839999]
            seccompProfile:
              type: RuntimeDefault
          image: oci.external-secrets.io/external-secrets/external-secrets:v0.20.4
          imagePullPolicy: IfNotPresent
          args:
          - --concurrent=1
          - --metrics-addr=:8080
          - --loglevel=info
          - --zap-time-encoding=epoch
          ports:
            - containerPort: 8080
              protocol: TCP
              name: metrics
          resources:
            limits:
              cpu: 60m
              memory: 140Mi
            requests:
              cpu: 30m
              memory: 70Mi
      dnsPolicy: ClusterFirst
---
# Source: external-secrets/templates/webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-secrets-webhook
  namespace: external-secrets-operator
  labels:
    helm.sh/chart: external-secrets-0.20.4
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/instance: helm-chart-0.20.4
    app.kubernetes.io/version: "v0.20.4"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-webhook
      app.kubernetes.io/instance: helm-chart-0.20.4
  template:
    metadata:
      labels:
        helm.sh/chart: external-secrets-0.20.4
        app.kubernetes.io/name: external-secrets-webhook
        app.kubernetes.io/instance: helm-chart-0.20.4
        app.kubernetes.io/version: "v0.20.4"
        app.kubernetes.io/managed-by: Helm
    spec:
      hostNetwork: false
      serviceAccountName: external-secrets-webhook
      automountServiceAccountToken: true
      containers:
        - name: webhook
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            # runAsUser: 1000 
            # unable to validate against any security context constraint: [provider "anyuid": Forbidden: not usable by user or serviceaccount, provider restricted-v2: .containers[0].runAsUser:Invalid value: 1000: must be in the ranges: [1000830000, 1000839999]
            seccompProfile:
              type: RuntimeDefault
          image: oci.external-secrets.io/external-secrets/external-secrets:v0.20.4
          imagePullPolicy: IfNotPresent
          args:
          - webhook
          - --port=10250
          - --dns-name=external-secrets-webhook.external-secrets-operator.svc
          - --cert-dir=/tmp/certs
          - --check-interval=5m
          - --metrics-addr=:8080
          - --healthz-addr=:8081
          - --loglevel=info
          - --zap-time-encoding=epoch
          ports:
            - containerPort: 8080
              protocol: TCP
              name: metrics
            - containerPort: 10250
              protocol: TCP
              name: webhook
          readinessProbe:
            httpGet:
              port: 8081
              path: /readyz
            initialDelaySeconds: 20
            periodSeconds: 5
          volumeMounts:
            - name: certs
              mountPath: /tmp/certs
              readOnly: true
          resources:
            limits:
              cpu: 60m
              memory: 140Mi
            requests:
              cpu: 30m
              memory: 70Mi
      volumes:
        - name: certs
          secret:
            secretName: external-secrets-webhook
