manifests/platform/external-secrets-operator/components/helm/service.yaml
---
# Source: external-secrets/templates/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-secrets-webhook
  namespace: external-secrets-operator
  labels:
    helm.sh/chart: external-secrets-0.20.4
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/instance: helm-chart-0.20.4
    app.kubernetes.io/version: "v0.20.4"
    app.kubernetes.io/managed-by: Helm
    external-secrets.io/component: webhook
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: webhook
    protocol: TCP
    name: webhook
  selector:
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/instance: helm-chart-0.20.4
